--- a/css/iCloud.css
+++ b/css/iCloud.css
@@ -5,6 +5,7 @@
   padding: 0;
   list-style: none;
   box-sizing: border-box;
+  font-family: 'SFNSText', 'Helvetica Neue', 'Microsoft Yahei', 'SimHei', sans-serif;
 }
 
 a {
@@ -18,16 +19,9 @@ body {
   font-size: 16px;
 }
 
-#wzq {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  width: 100%;
-  height: 636px;
-  background: url("../images/bg_01.png");
-  background-size: 1356px 636px;
-  background-repeat: no-repeat;
+/*页头*/
+#iCloud {
+  width: 100px;
+  height: 100px;
+  background: red;
 }
