--- a/css/iCloud.css
+++ b/css/iCloud.css
@@ -18,16 +18,8 @@ body {
   font-size: 16px;
 }
 
-#wzq {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  width: 100%;
-  height: 636px;
-  background: url("../images/bg_01.png");
-  background-size: 1356px 636px;
-  background-repeat: no-repeat;
+#iCloud {
+  width: 100px;
+  height: 100px;
+  background: red;
 }
