--- a/css/iCloud/iCloud.scss
+++ b/css/iCloud/iCloud.scss
@@ -50,7 +50,7 @@
 }
 /*页头*/
 #iCloud {
-    @include whb(324px,638px,#383836);
+    @include whb(389px,638px,#383836);
     @include left-top(0px,0px,0px);
     position: relative;
 }
@@ -60,7 +60,7 @@
 }
 /*left-top-view*/
 .left-top-view {
-    @include whb(324px,44px,transparent);
+    @include whb(389px,44px,transparent);
     @include left-right(0px,0px,0px);
     border-bottom: 1px solid #1a1a1a;
     ul {
@@ -95,7 +95,7 @@
         }
         .info-img {
             right: 54px;
-            @include bg-position(11px,7px,46%);
+            @include bg-position(11px,7px,50%);
             @include bg-img(url("../images/packed-5.png"),no-repeat,-155px -647px);
         }
     }
@@ -133,7 +133,7 @@
 /*left-top-view End*/
 /*left-bottom-view*/
 .collection-top {
-//  overflow: hidden;
+    //  overflow: hidden;
     @include position(0px,0px,0px,0px);
     margin: 0;
     border: 0 solid transparent;
@@ -194,13 +194,13 @@
 }
 .sc-outline {
     @include position(0px,45px,0px,0px);
-    @include whb(320px,44px,transparent);
+    @include whb(389px,44px,transparent);
     @include position(4px,0px,0px,0px);
     &:after {
         @include clearfix;
     }
     .collection-color-icon {
-        @include whb(320px,44px,transparent);
+        @include whb(389px,44px,transparent);
         &:after {
             @include clearfix;
         }
@@ -244,13 +244,136 @@
         bottom: 0;
         height: 2px;
         @include bg-img(url("../images/packed-11.png"),no-repeat,0px 0px);
-        background-size: 320px 2px;
+        background-size: 342px 2px;
     }
 }
 /*left-bottom-view End*/
 /*right-main-view*/
 #iClouds {
-    @include whb(1025px,638px,#FAFAFA);
-    @include position(324px,0px,0px,0px);
+    @include whb(977px,638px,#FAFAFA);
+    @include position(389px,0px,0px,0px);
+}
+.right-top-view {
+    position: relative;
+    @include whb(100%,44px,transparent);
+    border-bottom: 1px solid rgba(128,128,128,0.35);
+    &:after {
+        @include clearfix;
+    }
+    div {
+        float: left;
+    }
+    >.left-top {
+        position: relative;
+        height: 44px;
+        width: 50%;
+        >.left-icon {
+            position: absolute;
+            left: 11px;
+            width: 24px;
+            top: 8px;
+            height: 24px;
+            @include bg-img(url("../images/packed-5.png"),no-repeat,-138px -359px);
+        }
+        >input {
+            display: block;
+            @include whb(100%,43px,transparent);
+            border: 0;
+            outline: none;
+            padding-left: 42px;
+            color: #ccc;
+            font-size: 20px;
+            &:hover {
+                border-right: 1px solid rgba(128,128,128,0.35);
+                background: #fff;
+            }
+        }
+    }
+    >.right-top {
+        position: absolute;
+        right: 2px;
+        top: 0;
+        bottom: 0;
+        @include whb(136px,44px,transparent);
+        color: #333;
+        cursor: pointer;
+        >label {
+            line-height: 44px;
+            font-size: 21px;
+            padding-right: 18px;
+            cursor: pointer;
+        }
+        >.info-img {
+            right: 54px;
+            @include bg-position(11px,7px,50%);
+            @include bg-img(url("../images/packed-5.png"),no-repeat,-155px -647px);
+            color: #333;
+        }
+        >.line {
+            position: absolute;
+            margin-top: -11px;
+            right: 44px;
+            width: 1px;
+            top: 25%;
+            height: 22px;
+            overflow: hidden;
+            margin: 0;
+            border: solid 0 transparent;
+            background-color: #e5e5e5;
+        }
+        >.help {
+            @include bg-position(22px,22px,50%);
+            left: 83%;
+            margin-top: -11px;
+            margin-left: -11px;
+            @include bg-img(url("../images/packed-5.png"),no-repeat,-137px -526px);
+        }
+    }
+}
+.right-center-view {
+    @include position(0px,69px,0px,0px);
+    @include whb(977px,567,transparent);
+    background: red;
+    .right-center {
+        @include position(0px,0px,0px,0px);
+    }
+}
+.right-title {
+    position: absolute;
+    left: 28px;
+    right: 0;
+    top: 0;
+    height: 62px;
+    .title {
+        overflow: hidden !important;
+        text-overflow: ellipsis !important;
+        white-space: nowrap !important;
+        font-size: 40px;
+        line-height: 1.2;
+        cursor: default;
+        color: #41ACF9;
+    }
+    .right-button {
+        position: absolute;
+        right: 30px;
+        top: 17px;
+        height: 27px;
+        width: 39px;
+        cursor: pointer;
+        label {
+            color: #41ACF9;
+        }
+    }
+}
+.right-inner {
+    @include position(0px,56px,0px,0px);
+    .row-top {
+        @include left-right(30px,0px,0px);
+        height: 2px;
+        background-image: url("../packed-3.png");
+        background-position: 0 0;
+        background-repeat: repeat;
+        z-index: 5;
+    }
 }
 /*right-main-view End*/
