--- a/css/iCloud.css
+++ b/css/iCloud.css
@@ -534,10 +534,71 @@ body {
   right: 0px;
   top: 0px;
   height: 2px;
-  background-image: url("../packed-3.png");
+  background-image: url("../images/packed-11.png");
   background-position: 0 0;
   background-repeat: repeat;
   z-index: 5;
+}
+
+.right-inner .finish {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.right-inner .complete {
+  position: absolute;
+  left: 30px;
+  right: 0px;
+  top: 0px;
+  height: 52px;
+}
+
+.right-inner .complete .container {
+  position: absolute;
+  top: 16px;
+  left: 51px;
+  margin: 0;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  color: #999;
+  font-size: 19px;
+  cursor: default;
+}
+
+.right-inner .project {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 52px;
+  height: 52px;
+}
+
+.right-inner .project .row-top {
+  left: 81px;
+}
+
+.right-inner .project .row-bottom {
+  position: absolute;
+  right: 0px;
+  bottom: 0;
+  left: 81px;
+  height: 2px;
+  background-image: url("../images/packed-11.png");
+  background-position: 0 0;
+  background-repeat: repeat;
+  z-index: 5;
+}
+
+.right-inner .project .pro-title {
+  position: absolute;
+  top: 14px;
+  left: 81px;
+  color: #999;
+  font-size: 19px;
 }
 
 /*right-main-view End*/
