--- a/css/iCloud.css
+++ b/css/iCloud.css
@@ -248,25 +248,22 @@ body {
   top: 45px;
   right: 0px;
   bottom: 0px;
+  margin-top: 45px;
   min-height: 549px;
   margin: 0;
   border: 0 solid transparent;
+  overflow: auto;
+}
+
+.collection-bottom .active {
+  background: #1A1A1A;
 }
 
 .sc-outline {
-  position: absolute;
-  left: 0px;
-  top: 45px;
-  right: 0px;
-  bottom: 0px;
   width: 389px;
   height: 44px;
   background: transparent;
-  position: absolute;
-  left: 4px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
+  position: relative;
 }
 
 .sc-outline:after {
@@ -275,23 +272,11 @@ body {
   clear: both;
 }
 
-.sc-outline .collection-color-icon {
-  width: 389px;
-  height: 44px;
-  background: transparent;
-}
-
-.sc-outline .collection-color-icon:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.sc-outline .collection-color-icon > li {
+.sc-outline > div {
   float: left;
 }
 
-.sc-outline .collection-color-icon > .icon {
+.sc-outline > .icon {
   position: absolute;
   left: 12px;
   top: 12px;
@@ -303,7 +288,7 @@ body {
   background-position: -51px -571px;
 }
 
-.sc-outline .collection-color-icon > .title {
+.sc-outline > .title {
   position: absolute;
   left: 42px;
   top: 0px;
@@ -318,7 +303,7 @@ body {
   color: #fff;
 }
 
-.sc-outline .collection-color-icon > .share {
+.sc-outline > .share {
   background-image: url("../images/packed-5.png");
   background-repeat: no-repeat;
   background-position: -119px -497px;
@@ -331,7 +316,7 @@ body {
   cursor: pointer;
 }
 
-.sc-outline .collection-color-icon > .share:hover {
+.sc-outline > .share:hover {
   color: #fff;
 }
 
@@ -347,17 +332,31 @@ body {
   background-size: 342px 2px;
 }
 
+.sc-outline input {
+  width: 293px;
+  height: 44px;
+  position: absolute;
+  left: 40px;
+  padding-left: 15px;
+  font-size: 20px;
+  color: #dfdfdf;
+  outline: none;
+  border: none;
+  background: transparent;
+}
+
 /*left-bottom-view End*/
 /*right-main-view*/
 #iClouds {
   width: 977px;
   height: 638px;
-  background: #FAFAFA;
+  background: url(../images/packed-4.png);
   position: absolute;
   left: 389px;
   top: 0px;
   right: 0px;
   bottom: 0px;
+  min-width: 680px;
 }
 
 .right-top-view {
@@ -426,8 +425,10 @@ body {
 
 .right-top-view > .right-top > label {
   line-height: 44px;
+  font-weight: 100;
   font-size: 21px;
   padding-right: 18px;
+  color: #ccc;
   cursor: pointer;
 }
 
@@ -504,6 +505,7 @@ body {
   line-height: 1.2;
   cursor: default;
   color: #41ACF9;
+  font-weight: 100;
 }
 
 .right-title .right-button {
@@ -519,6 +521,218 @@ body {
   color: #41ACF9;
 }
 
+.right-title .right-button .input {
+  width: 294px;
+  height: 37px;
+  background: transparent;
+  margin: 20px auto;
+  z-index: 30;
+  padding: 10px;
+}
+
+.right-title .right-button .input input {
+  width: 294px;
+  height: 37px;
+  background: #fff;
+  margin: -10px;
+  position: absolute;
+  padding-left: 15px;
+  font-size: 21px;
+  border: 1px solid #D9D9D9;
+  border-radius: 3px;
+}
+
+.right-title .right-xk {
+  width: 365px;
+  height: 236px;
+  background: #fff;
+  position: absolute;
+  right: 58px;
+  top: -75px;
+  z-index: 10;
+  border-radius: 10px;
+  padding: 8px;
+  box-shadow: 0 0 9px rgba(0, 0, 0, 0.5);
+}
+
+.right-title .right-xk .xk-info {
+  width: 355px;
+  height: 226px;
+  background: #fff;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border-radius: 8px;
+  border: 1px solid #E5E5E5;
+}
+
+.right-title .right-xk .xk-img {
+  width: 100%;
+  height: 168px;
+  background: transparent;
+  position: absolute;
+  right: 1px;
+  top: 0;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  border-bottom: 1px solid #e5e5e5;
+  margin-right: -1px;
+}
+
+.right-title .right-xk .xk-button {
+  width: 100%;
+  height: 57px;
+  background: transparent;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.right-title .right-xk .xk-button:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.right-title .right-xk .xk-button li {
+  float: left;
+  cursor: pointer;
+}
+
+.right-title .right-xk .xk-button .delete {
+  line-height: 25px;
+  color: #ff3b30;
+  padding: 17px;
+  margin-right: 60px;
+  margin-left: 15px;
+}
+
+.right-title .right-xk .xk-button .cancel {
+  margin: 0 10px 0 66px;
+  line-height: 25px;
+  color: #1D89FF;
+  padding: 17px;
+}
+
+.right-title .right-xk .xk-button .finish {
+  width: 55px;
+  height: 26px;
+  background: transparent;
+  line-height: 26px;
+  margin-top: 17px;
+  font-weight: 600;
+  color: #007AFF;
+  text-align: right;
+  white-space: nowrap;
+  letter-spacing: 3px;
+  border-left: 1px solid #999;
+}
+
+.right-title .color {
+  width: 294px;
+  height: auto;
+  background: transparent;
+  margin: 0 auto;
+}
+
+.right-title .color .tle {
+  padding: 10px 10px 10px 0;
+}
+
+.right-title .color .color-img {
+  width: 316px;
+  height: 33px;
+  background: transparent;
+  margin-left: -10px;
+}
+
+.right-title .color .color-img li {
+  float: left;
+  height: 33px;
+  width: 33px;
+  margin-left: 10px;
+}
+
+.right-title .color .color-img li div {
+  width: 25px;
+  height: 25px;
+  margin-left: 4px;
+  margin-top: 4px;
+  background-image: url("../images/stylesheet-1.png");
+  background-repeat: no-repeat;
+}
+
+.right-title .color .color-img li.first div {
+  margin-left: 0;
+  background-position: 0 -231px;
+}
+
+.right-title .color .color-img li:nth-child(2) div {
+  background-position: 0 -256px;
+}
+
+.right-title .color .color-img li:nth-child(3) div {
+  background-position: 0 -281px;
+}
+
+.right-title .color .color-img li:nth-child(4) div {
+  background-position: 0 -306px;
+}
+
+.right-title .color .color-img li:nth-child(5) div {
+  background-position: 0 -331px;
+}
+
+.right-title .color .color-img li:nth-child(6) div {
+  background-position: 0 -356px;
+}
+
+.right-title .color .color-img li:nth-child(7) div {
+  background-position: 0 -381px;
+}
+
+/*利用 list和map循环来写样式*/
+.img div.purple {
+  background-image: url("../images/stylesheet-1.png");
+  background-position: 0px -231px;
+}
+
+.img div.green {
+  background-image: url("../images/stylesheet-1.png");
+  background-position: 0px -256px;
+}
+
+.img div.blue {
+  background-image: url("../images/stylesheet-1.png");
+  background-position: 0px -281px;
+}
+
+.img div.yellow {
+  background-image: url("../images/stylesheet-1.png");
+  background-position: 0px -306px;
+}
+
+.img div.blrown {
+  background-image: url("../images/stylesheet-1.png");
+  background-position: 0px -331px;
+}
+
+.img div.red {
+  background-image: url("../images/stylesheet-1.png");
+  background-position: 0px -356px;
+}
+
+.img div.orange {
+  background-image: url("../images/stylesheet-1.png");
+  background-position: 0px -381px;
+}
+
+/*利用 list和map循环来写样式  End*/
 .right-inner {
   position: absolute;
   left: 0px;
@@ -582,7 +796,7 @@ body {
 
 .right-inner .project .row-bottom {
   position: absolute;
-  right: 0px;
+  right: 0;
   bottom: 0;
   left: 81px;
   height: 2px;
@@ -601,3 +815,62 @@ body {
 }
 
 /*right-main-view End*/
+/*list map 循环*/
+.images .red {
+  color: #f72469;
+  background-image: url("aa.png");
+  background-position: 10px 10px;
+}
+
+.images .yellow {
+  color: #f3cb00;
+  background-image: url("aa.png");
+  background-position: 20px 20px;
+}
+
+.images .blue {
+  color: #40acf9;
+  background-image: url("aa.png");
+  background-position: 10px 30px;
+}
+
+.images .green {
+  color: #fff;
+  background-image: url("aa.png");
+  background-position: 22px 33px;
+}
+
+.sc-outline .icon.purple {
+  background-image: url("../images/packed-5.png");
+  background-position: -34px -571px;
+}
+
+.sc-outline .icon.green {
+  background-image: url("../images/packed-5.png");
+  background-position: 0px -571px;
+}
+
+.sc-outline .icon.blue {
+  background-image: url("../images/packed-5.png");
+  background-position: -51px -571px;
+}
+
+.sc-outline .icon.yellow {
+  background-image: url("../images/packed-5.png");
+  background-position: -85px -571px;
+}
+
+.sc-outline .icon.blrown {
+  background-image: url("../images/packed-5.png");
+  background-position: -133px -549px;
+}
+
+.sc-outline .icon.red {
+  background-image: url("../images/packed-5.png");
+  background-position: -68px -571px;
+}
+
+.sc-outline .icon.orange {
+  background-image: url("../images/packed-5.png");
+  background-position: -102px -571px;
+}
